# icu-catalogue-api

./: CourseOfferings2025.json  Dockerfile  LICENSE  README.md  docker-compose.yaml  icu_course_offerings_2024.py  icu_syllubus_scraping_2024.py  package.json  preparation for database of course offerings.py  pyproject.toml  syllabus_search_general.py  user_log.py  user_log_sql.py
prisma/: schema.prisma
src/: main.ts
src/search/: search.controller.ts
