[tool.poetry]
name = "icu-catalogue-api"
version = "0.1.0"
description = "API of ICU Catalogue"
authors = ["Itsuki Kigoshi","Cao Yifei"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
